--- a/views/scores/index.ejs
+++ b/views/scores/index.ejs
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
-        <meta charset="utf-8">
-        <title>App</title>
+        <%- include ('../partials/head.ejs') %>
+
     </head>
     <body>
-        <h1>Welcome to the app</h1>
-
+        <header>
+            <%- include ('../partials/header.ejs') %>
+        </header>
+        <div class="container">
+            <a href="/sessions/new">
+                <div class="cards">
+                    <h2>log in</h2>
+                </div>
+            </a>
+            <a href="/users/new">
+                <div class="cards">
+                    <h2>sign up</h2>
+                </div>
+            </a>
+        </div>
     </body>
 </html>
