--- a/views/scores/new.ejs
+++ b/views/scores/new.ejs
@@ -8,7 +8,7 @@
             <%- include ('../partials/nav.ejs') %>
         </nav>
             <h1>New Score</h1>
-            <form class="" action="/scores" method="post">
+            <form class="" action="/scores" method="POST">
                 <label for="course">Course</label>
                 <input type="text" name="course" /><br>
                 <label for="score">Score</label>
