--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,12 +1,14 @@
-<a href="/scores" class="brand-logo left">Evan's Scores</a>
+<a href="/scores" class="brand-logo left">Handicap Tracker</a>
 <ul class="right">
-  <li><a href="/scores/new">Create a new Score</a></li>
+  <% if (currentUser) { %>
   <li>Welcome</li>
   <li>
     <form action="/sessions?_method=DELETE" method="POST">
       <input type="submit" value="Log Out" class="btn-small blue" />
     </form>
   </li>
+  <% } else { %>
   <li><a href="/users/new">Sign Up</a></li>
   <li><a href="/sessions/new">Log In</a></li>
+  <% } %>
 </ul>
