--- a/views/scores/new.ejs
+++ b/views/scores/new.ejs
@@ -13,6 +13,10 @@
                 <input type="text" name="course" /><br>
                 <label for="score">Score</label>
                 <input type="text" name="score" /><br>
+                <label for="tees">Tees</label>
+                <input type="text" name="tees" /><br>
+                <label for="date">Date</label>
+                <input type="text" name="date" /><br>
                 <input type="submit" name="" value="Submit Score">
             </form>
 
