--- a/views/scores/new.ejs
+++ b/views/scores/new.ejs
@@ -19,6 +19,6 @@
                 <input type="text" name="date" /><br>
                 <input type="submit" name="" value="Submit Score">
             </form>
-
+        <script src="/js/app.js" charset="utf-8"></script>
     </body>
 </html>
