--- a/views/scores/show.ejs
+++ b/views/scores/show.ejs
@@ -22,6 +22,6 @@
         <form class="" action="/scores/<%=score.id;%>?_method=DELETE" method="post">
             <input type="submit" name="" value="DELETE">
         </form>
-
+        <script src="/js/app.js" charset="utf-8"></script>
     </body>
 </html>
