--- a/views/scores/edit.ejs
+++ b/views/scores/edit.ejs
@@ -22,6 +22,6 @@
                 <input type="submit" name="" value="Submit Log">
             </form>
         </blockquote>
-
+        <script src="/js/app.js" charset="utf-8"></script>
     </body>
 </html>
