got a really basic outline for a scorecard on the new score page

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -61,3 +61,24 @@ li {
 .handicap {
     text-align: right;
 }
+
+.scorecard {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: row;
+    margin: 5px;
+}
+
+.front-9, .back-9 {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    border: 1px solid grey;
+    text-align: center;
+}
+.hole-info {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    border: 1px solid grey;
+}
