--- a/views/scores/new.ejs
+++ b/views/scores/new.ejs
@@ -19,6 +19,221 @@
                 <input type="text" name="date" /><br>
                 <input type="submit" name="" value="Submit Score">
             </form>
+            <!-- Score Card Layout -->
+            <div class="scorecard">
+                <div class="card-labels">
+                    <div class="">
+                        <span>Hole</span>
+                    </div>
+                    <div class="">
+                        <span>Par</span>
+                    </div>
+                    <div class="">
+                        <span><%=currentUser.username%></span>
+                    </div>
+                </div>
+                <div class="front-9">
+                    <div class="hole-info">
+                        <span>
+                            1
+                        </span>
+                        <span class="hole-par">
+                            5
+                        </span>
+                        <span>
+                            form
+                        </span>
+                    </div>
+                    <div class="hole-info">
+                        <span>
+                            2
+                        </span>
+                        <span class="hole-par">
+                            4
+                        </span>
+                        <span>
+                            form
+                        </span>
+                    </div>
+                    <div class="hole-info">
+                        <span>
+                            3
+                        </span>
+                        <span class="hole-par">
+                            4
+                        </span>
+                        <span>
+                            form
+                        </span>
+                    </div>
+                    <div class="hole-info">
+                        <span>
+                            4
+                        </span>
+                        <span class="hole-par">
+                            3
+                        </span>
+                        <span>
+                            form
+                        </span>
+                    </div>
+                    <div class="hole-info">
+                        <span>
+                            5
+                        </span>
+                        <span class="hole-par">
+                            4
+                        </span>
+                        <span>
+                            form
+                        </span>
+                    </div>
+                    <div class="hole-info">
+                        <span>
+                            6
+                        </span>
+                        <span class="hole-par">
+                            4
+                        </span>
+                        <span>
+                            form
+                        </span>
+                    </div>
+                    <div class="hole-info">
+                        <span>
+                            7
+                        </span>
+                        <span class="hole-par">
+                            5
+                        </span>
+                        <span>
+                            form
+                        </span>
+                    </div>
+                    <div class="hole-info">
+                        <span>
+                            8
+                        </span>
+                        <span class="hole-par">
+                            3
+                        </span>
+                        <span>
+                            form
+                        </span>
+                    </div>
+                    <div class="hole-info">
+                        <span>
+                            9
+                        </span>
+                        <span class="hole-par">
+                            4
+                        </span>
+                        <span>
+                            form
+                        </span>
+                    </div>
+                </div>
+                <div class="back-9">
+                    <div class="hole-info">
+                        <span>
+                            10
+                        </span>
+                        <span class="hole-par">
+                            5
+                        </span>
+                        <span>
+                            form
+                        </span>
+                    </div>
+                    <div class="hole-info">
+                        <span>
+                            11
+                        </span>
+                        <span class="hole-par">
+                            4
+                        </span>
+                        <span>
+                            form
+                        </span>
+                    </div>
+                    <div class="hole-info">
+                        <span>
+                            12
+                        </span>
+                        <span class="hole-par">
+                            4
+                        </span>
+                        <span>
+                            form
+                        </span>
+                    </div>
+                    <div class="hole-info">
+                        <span>
+                            13
+                        </span>
+                        <span class="hole-par">
+                            3
+                        </span>
+                        <span>
+                            form
+                        </span>
+                    </div>
+                    <div class="hole-info">
+                        <span>
+                            14
+                        </span>
+                        <span class="hole-par">
+                            4
+                        </span>
+                        <span>
+                            form
+                        </span>
+                    </div>
+                    <div class="hole-info">
+                        <span>
+                            15
+                        </span>
+                        <span class="hole-par">
+                            4
+                        </span>
+                        <span>
+                            form
+                        </span>
+                    </div>
+                    <div class="hole-info">
+                        <span>
+                            16
+                        </span>
+                        <span class="hole-par">
+                            5
+                        </span>
+                        <span>
+                            form
+                        </span>
+                    </div>
+                    <div class="hole-info">
+                        <span>
+                            17
+                        </span>
+                        <span class="hole-par">
+                            3
+                        </span>
+                        <span>
+                            form
+                        </span>
+                    </div>
+                    <div class="hole-info">
+                        <span>
+                            18
+                        </span>
+                        <span class="hole-par">
+                            4
+                        </span>
+                        <span>
+                            form
+                        </span>
+                </div>
+            </div>
         <script src="/js/app.js" charset="utf-8"></script>
     </body>
 </html>
