renamed scores to rounds, added a scorecard page which will try to move into roundsSchema

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,4 +1,4 @@
-<a href="/scores" class="brand-logo left">Handicap Tracker</a>
+<a href="/rounds" class="brand-logo left">Handicap Tracker</a>
 <ul class="right">
   <% if (currentUser) { %>
   <div>Welcome <%=currentUser.username%></div>
