--- a/views/rounds/new.ejs
+++ b/views/rounds/new.ejs
@@ -10,16 +10,268 @@
             <h1>New Score</h1>
             <form class="" action="/rounds" method="POST">
                 <label for="course">Course</label>
-                <input type="text" name="course" /><br>
+                <select id = "courseList" name="course">
+                   <option value = "home">home</option>
+                   <option value = "away">away</option>
+                </select>
+                <br>
+                <!-- <input type="text" name="course" /><br> -->
                 <label for="score">Score</label>
-                <input type="text" name="score" /><br>
+                <input type="text" name="score" />
+                <br>
                 <label for="tees">Tees</label>
-                <input type="text" name="tees" /><br>
+                <select id = "teesList" name="tees">
+                   <option value = "back">back</option>
+                   <option value = "middle">middle</option>
+                   <option value = "forward">forward</option>
+                </select>
+                <br>
                 <label for="date">Date</label>
-                <input type="text" name="date" /><br>
+                <input type="date" name="date" />
+                <br>
+                <div class="scorecard">
+                    <div class="card-labels">
+                        <div class="">
+                            <span>Hole</span>
+                        </div>
+                        <div class="">
+                            <span>Par</span>
+                        </div>
+                        <div class="">
+                            <span><%=currentUser.username%></span>
+                        </div>
+                    </div>
+                    <!-- <form class="" action="/rounds" method="post"> -->
+                        <div class="front-9">
+                            <div class="hole-info">
+                                <span>
+                                    1
+                                </span>
+                                <span class="hole-par">
+                                    5
+                                </span>
+                                <span>
+                                    <input type="number" name="1" value="">
+                                </span>
+                            </div>
+                            <div class="hole-info">
+                                <span>
+                                    2
+                                </span>
+                                <span class="hole-par">
+                                    4
+                                </span>
+                                <span>
+                                    <input type="number" name="2" value="">
+                                </span>
+                            </div>
+                            <div class="hole-info">
+                                <span>
+                                    3
+                                </span>
+                                <span class="hole-par">
+                                    4
+                                </span>
+                                <span>
+                                    <input type="number" name="3" value="">
+                                </span>
+                            </div>
+                            <div class="hole-info">
+                                <span>
+                                    4
+                                </span>
+                                <span class="hole-par">
+                                    3
+                                </span>
+                                <span>
+                                    <input type="number" name="4" value="">
+                                </span>
+                            </div>
+                            <div class="hole-info">
+                                <span>
+                                    5
+                                </span>
+                                <span class="hole-par">
+                                    4
+                                </span>
+                                <span>
+                                    <input type="number" name="5" value="">
+                                </span>
+                            </div>
+                            <div class="hole-info">
+                                <span>
+                                    6
+                                </span>
+                                <span class="hole-par">
+                                    4
+                                </span>
+                                <span>
+                                    <input type="number" name="6" value="">
+                                </span>
+                            </div>
+                            <div class="hole-info">
+                                <span>
+                                    7
+                                </span>
+                                <span class="hole-par">
+                                    5
+                                </span>
+                                <span>
+                                    <input type="number" name="7" value="">
+                                </span>
+                            </div>
+                            <div class="hole-info">
+                                <span>
+                                    8
+                                </span>
+                                <span class="hole-par">
+                                    3
+                                </span>
+                                <span>
+                                    <input type="number" name="8" value="">
+                                </span>
+                            </div>
+                            <div class="hole-info">
+                                <span>
+                                    9
+                                </span>
+                                <span class="hole-par">
+                                    4
+                                </span>
+                                <span>
+                                    <input type="number" name="9" value="">
+                                </span>
+                            </div>
+                        </div>
+                        <div class="card-labels">
+                            <div class="">
+                                <span>Out</span>
+                            </div>
+                            <div class="">
+                                <span>36</span>
+                            </div>
+                            <div class="">
+                                <span> </span>
+                            </div>
+                        </div>
+                        <div class="back-9">
+                            <div class="hole-info">
+                                <span>
+                                    10
+                                </span>
+                                <span class="hole-par">
+                                    5
+                                </span>
+                                <span>
+                                    <input type="number" name="10" value="">
+                                </span>
+                            </div>
+                            <div class="hole-info">
+                                <span>
+                                    11
+                                </span>
+                                <span class="hole-par">
+                                    4
+                                </span>
+                                <span>
+                                    <input type="number" name="11" value="">
+                                </span>
+                            </div>
+                            <div class="hole-info">
+                                <span>
+                                    12
+                                </span>
+                                <span class="hole-par">
+                                    4
+                                </span>
+                                <span>
+                                    <input type="number" name="12" value="">
+                                </span>
+                            </div>
+                            <div class="hole-info">
+                                <span>
+                                    13
+                                </span>
+                                <span class="hole-par">
+                                    3
+                                </span>
+                                <span>
+                                    <input type="number" name="13" value="">
+                                </span>
+                            </div>
+                            <div class="hole-info">
+                                <span>
+                                    14
+                                </span>
+                                <span class="hole-par">
+                                    4
+                                </span>
+                                <span>
+                                    <input type="number" name="14" value="">
+                                </span>
+                            </div>
+                            <div class="hole-info">
+                                <span>
+                                    15
+                                </span>
+                                <span class="hole-par">
+                                    4
+                                </span>
+                                <span>
+                                    <input type="number" name="15" value="">
+                                </span>
+                            </div>
+                            <div class="hole-info">
+                                <span>
+                                    16
+                                </span>
+                                <span class="hole-par">
+                                    5
+                                </span>
+                                <span>
+                                    <input type="number" name="16" value="">
+                                </span>
+                            </div>
+                            <div class="hole-info">
+                                <span>
+                                    17
+                                </span>
+                                <span class="hole-par">
+                                    3
+                                </span>
+                                <span>
+                                    <input type="number" name="17" value="">
+                                </span>
+                            </div>
+                            <div class="hole-info">
+                                <span>
+                                    18
+                                </span>
+                                <span class="hole-par">
+                                    4
+                                </span>
+                                <span>
+                                    <input type="number" name="18" value="">
+                                </span>
+                            </div>
+                        </div>
+                        <div class="card-labels">
+                            <div class="">
+                                <span>In</span>
+                            </div>
+                            <div class="">
+                                <span>36</span>
+                            </div>
+                            <div class="">
+                                <span> </span>
+                            </div>
+                        </div>
+                        <!-- <input type="submit" name="" value="Submit Scorecard"> -->
+                    <!-- </form> -->
+                </div>
                 <input type="submit" name="" value="Submit Score">
             </form>
-            <a href="/scorecard/new">Input full scorecard</a>
+            <!-- <a href="/scorecard/new">Input full scorecard</a> -->
             </div>
         <script src="/js/app.js" charset="utf-8"></script>
     </body>
