renamed keys in scorecard schema

--- a/views/rounds/new.ejs
+++ b/views/rounds/new.ejs
@@ -51,7 +51,7 @@
                                     5
                                 </span>
                                 <span>
-                                    <input type="number" name="1" value="">
+                                    <input type="number" name="one" value="">
                                 </span>
                             </div>
                             <div class="hole-info">
@@ -62,7 +62,7 @@
                                     4
                                 </span>
                                 <span>
-                                    <input type="number" name="2" value="">
+                                    <input type="number" name="two" value="">
                                 </span>
                             </div>
                             <div class="hole-info">
@@ -73,7 +73,7 @@
                                     4
                                 </span>
                                 <span>
-                                    <input type="number" name="3" value="">
+                                    <input type="number" name="three" value="">
                                 </span>
                             </div>
                             <div class="hole-info">
@@ -84,7 +84,7 @@
                                     3
                                 </span>
                                 <span>
-                                    <input type="number" name="4" value="">
+                                    <input type="number" name="four" value="">
                                 </span>
                             </div>
                             <div class="hole-info">
@@ -95,7 +95,7 @@
                                     4
                                 </span>
                                 <span>
-                                    <input type="number" name="5" value="">
+                                    <input type="number" name="five" value="">
                                 </span>
                             </div>
                             <div class="hole-info">
@@ -106,7 +106,7 @@
                                     4
                                 </span>
                                 <span>
-                                    <input type="number" name="6" value="">
+                                    <input type="number" name="six" value="">
                                 </span>
                             </div>
                             <div class="hole-info">
@@ -117,7 +117,7 @@
                                     5
                                 </span>
                                 <span>
-                                    <input type="number" name="7" value="">
+                                    <input type="number" name="seven" value="">
                                 </span>
                             </div>
                             <div class="hole-info">
@@ -128,7 +128,7 @@
                                     3
                                 </span>
                                 <span>
-                                    <input type="number" name="8" value="">
+                                    <input type="number" name="eight" value="">
                                 </span>
                             </div>
                             <div class="hole-info">
@@ -139,7 +139,7 @@
                                     4
                                 </span>
                                 <span>
-                                    <input type="number" name="9" value="">
+                                    <input type="number" name="nine" value="">
                                 </span>
                             </div>
                         </div>
@@ -163,7 +163,7 @@
                                     5
                                 </span>
                                 <span>
-                                    <input type="number" name="10" value="">
+                                    <input type="number" name="ten" value="">
                                 </span>
                             </div>
                             <div class="hole-info">
@@ -174,7 +174,7 @@
                                     4
                                 </span>
                                 <span>
-                                    <input type="number" name="11" value="">
+                                    <input type="number" name="eleven" value="">
                                 </span>
                             </div>
                             <div class="hole-info">
@@ -185,7 +185,7 @@
                                     4
                                 </span>
                                 <span>
-                                    <input type="number" name="12" value="">
+                                    <input type="number" name="twelve" value="">
                                 </span>
                             </div>
                             <div class="hole-info">
@@ -196,7 +196,7 @@
                                     3
                                 </span>
                                 <span>
-                                    <input type="number" name="13" value="">
+                                    <input type="number" name="thirteen" value="">
                                 </span>
                             </div>
                             <div class="hole-info">
@@ -207,7 +207,7 @@
                                     4
                                 </span>
                                 <span>
-                                    <input type="number" name="14" value="">
+                                    <input type="number" name="fourteen" value="">
                                 </span>
                             </div>
                             <div class="hole-info">
@@ -218,7 +218,7 @@
                                     4
                                 </span>
                                 <span>
-                                    <input type="number" name="15" value="">
+                                    <input type="number" name="fifteen" value="">
                                 </span>
                             </div>
                             <div class="hole-info">
@@ -229,7 +229,7 @@
                                     5
                                 </span>
                                 <span>
-                                    <input type="number" name="16" value="">
+                                    <input type="number" name="sixteen" value="">
                                 </span>
                             </div>
                             <div class="hole-info">
@@ -240,7 +240,7 @@
                                     3
                                 </span>
                                 <span>
-                                    <input type="number" name="17" value="">
+                                    <input type="number" name="seventeen" value="">
                                 </span>
                             </div>
                             <div class="hole-info">
@@ -251,7 +251,7 @@
                                     4
                                 </span>
                                 <span>
-                                    <input type="number" name="18" value="">
+                                    <input type="number" name="eighteen" value="">
                                 </span>
                             </div>
                         </div>
